fix: margin for big screens

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -36,7 +36,8 @@
   line-height: 18.75px
   color: #F1F1F1
   display: flex
-  padding: 8px 176px
+  padding-top: 8px
+  padding-bottom: 8px
   &__right, &__left
     display: flex
     align-items: center
@@ -50,7 +51,8 @@
   margin-right: 12px
 .header-down
   display: flex
-  padding: 19px 176px
+  padding-top: 19px
+  padding-bottom: 19px
   &__left
     display: flex
   &__container
