--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -16,7 +16,19 @@ ul, ol
 button
   border: none
   outline: none
+  &:hover
+    cursor: pointer
+a
+  &:hover
+    cursor: pointer
 input::placeholder,textarea::placeholder
   font-size: 12px
   line-height: 15px
   color: red
+.title
+  font-family: Josefin Sans
+  font-size: 42px
+  line-height: 49px
+  color: #1A0B5B
+  margin: auto
+  font-weight: bold
