--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -7,6 +7,7 @@
     line-height: 40px
     margin-right: 88px
     font-weight: bold
+    color: rgba(13, 14, 67, 1)
   &-email, &-tel
     display: flex
     align-items: center
