--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,6 @@
-// Подключения стилей для всего
 @import 'settings'
-// Подключение нормализации
 @import 'normalize'
-// Подключение header
 @import 'blocks/header'
-// Подключение переменных
 @import 'variables'
+@import 'blocks/home-title'
+@import 'blocks/featured-products'
