--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -23,8 +23,10 @@ a
     cursor: pointer
 input::placeholder,textarea::placeholder
   font-size: 12px
-  line-height: 15px
-  color: red
+  line-height: 18px
+  padding: 5px 11px 5px 11px
+  font-family: Lato
+  color: #8A8FB9
 .title
   font-family: Josefin Sans
   font-size: 42px
