--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,3 +5,10 @@
 @import 'blocks/home-title'
 @import 'blocks/featured-products'
 @import 'blocks/leatest-products'
+
+// Подключение секции grid-default
+@import 'blocks/gird-default'
+// Подключение секции main-items
+@import 'blocks/main-items'
+// Подключение секции footer
+@import 'blocks/footer'
