--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,7 @@
 @import 'blocks/featured-products'
 @import 'blocks/leatest-products'
 @import 'blocks/offer'
+@import 'blocks/unique-features'
 
 // Подключение секции grid-default
 @import 'blocks/gird-default'
