--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,6 +7,7 @@
 @import 'blocks/leatest-products'
 @import 'blocks/offer'
 @import 'blocks/unique-features'
+@import 'blocks/trending-products'
 
 // Подключение секции grid-default
 @import 'blocks/gird-default'
