--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,14 +1,22 @@
+// Подключения стилей для всего
 @import 'settings'
+// Подключение нормализации
 @import 'normalize'
+// Подключение header
 @import 'blocks/header'
+// Подключение переменных
 @import 'variables'
-@import 'blocks/home-title'
-@import 'blocks/featured-products'
-@import 'blocks/leatest-products'
-
 // Подключение секции grid-default
 @import 'blocks/gird-default'
 // Подключение секции main-items
 @import 'blocks/main-items'
 // Подключение секции footer
 @import 'blocks/footer'
+// Подключение страницы product.html
+@import 'blocks/product'
+// Подключение секции playwood
+@import 'blocks/playwood'
+// Подключение секции description
+@import 'blocks/description'
+// Подключение секции related
+@import 'blocks/related'
