create: discount-item block

--- a/css/style.css
+++ b/css/style.css
@@ -554,6 +554,7 @@ template {
   color: #8a8fb9;
   max-width: 559px;
   margin-bottom: 27px;
+  line-height: 30px;
   z-index: 5;
 }
 .home-title__button {
@@ -693,6 +694,7 @@ template {
 }
 .leatest-products__new {
   color: #fb2e86;
+  text-decoration: underline;
 }
 .leatest-products__new, .leatest-products__best, .leatest-products__featured {
   margin-right: 60px;
@@ -993,6 +995,106 @@ template {
 }
 .trending-products__li--right {
   padding: 15px 0;
+}
+
+.discount-item__title {
+  margin-bottom: 19px;
+}
+.discount-item__container {
+  flex-direction: column;
+  align-items: center;
+}
+.discount-item__dot {
+  display: flex;
+  margin-right: 30px;
+}
+.discount-item__dot:after {
+  content: "";
+  height: 5px;
+  width: 5px;
+  border-radius: 100%;
+  display: block;
+  background: #fb4997;
+  margin-bottom: 5px;
+  margin-top: auto;
+  margin-left: 7px;
+}
+.discount-item__margin {
+  margin-right: 26px;
+}
+.discount-item__name {
+  font-family: Josefin Sans;
+  font-size: 35px;
+  color: #151875;
+  line-height: 46.2px;
+  letter-spacing: 0.015em;
+  margin-bottom: 16px;
+}
+.discount-item__subname {
+  font-family: Josefin Sans;
+  font-size: 21px;
+  line-height: 132%;
+  letter-spacing: 0.015em;
+  color: #FB2E86;
+  margin-bottom: 20px;
+}
+.discount-item__content {
+  position: relative;
+  width: 100%;
+}
+.discount-item__image {
+  position: absolute;
+  right: 0;
+  top: 70px;
+  margin-top: -100px;
+  margin-right: -70px;
+  z-index: -1;
+}
+.discount-item__desc {
+  font-size: 17px;
+  letter-spacing: 0.02em;
+  color: #B7BACB;
+  max-width: 523px;
+}
+.discount-item__list {
+  max-width: 532px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-row-gap: 10px;
+  margin-bottom: 37px;
+}
+.discount-item__li {
+  display: flex;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  color: #B8B8DC;
+}
+.discount-item__li:before {
+  content: "";
+  display: block;
+  height: 11px;
+  width: 16px;
+  background-image: url("../../imgs/mark.svg");
+  background-size: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 6px;
+}
+.discount-item__button {
+  margin-bottom: 0px;
+}
+.discount-item__filter {
+  margin-bottom: 0;
+}
+.discount-item__description {
+  padding-top: 111px;
+  padding-bottom: 106px;
+  margin-bottom: 79px;
 }
 
 .grid-default {
