--- a/sass/blocks/_leatest-products.sass
+++ b/sass/blocks/_leatest-products.sass
@@ -15,6 +15,7 @@
     color: rgba(21, 24, 117, 1)
   &__new
     color: rgba(251, 46, 134, 1)
+    text-decoration: underline
   &__new, &__best, &__featured
     margin-right: 60px
   &__grid
