--- a/sass/blocks/_home-title.sass
+++ b/sass/blocks/_home-title.sass
@@ -21,6 +21,7 @@
     color: rgba(138, 143, 185, 1)
     max-width: 559px
     margin-bottom: 27px
+    line-height: 30px
     z-index: 5
   &__button
     padding: 16px 40px
