--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,6 +8,7 @@
 @import 'blocks/offer'
 @import 'blocks/unique-features'
 @import 'blocks/trending-products'
+@import 'blocks/discount-item'
 
 // Подключение секции grid-default
 @import 'blocks/gird-default'
