--- a/css/style.css
+++ b/css/style.css
@@ -1097,6 +1097,40 @@ template {
   margin-bottom: 79px;
 }
 
+.top__title {
+  margin-bottom: 56px;
+}
+.top__container {
+  flex-direction: column;
+}
+
+.swiper {
+  margin-bottom: 125px;
+}
+.swiper-slide__image--top {
+  border-radius: 100%;
+  height: 269px;
+}
+.swiper-slide--top {
+  box-shadow: none;
+  width: 269px !important;
+  height: 345px !important;
+}
+.swiper-slide__title--top {
+  font-family: Josefin Sans;
+  font-size: 20px;
+  line-height: 23px;
+  color: #151875;
+  font-weight: normal;
+}
+.swiper-slide__price--top {
+  font-family: Josefin Sans;
+  font-size: 16px;
+  line-height: 19px;
+  color: #151875;
+  font-weight: normal;
+}
+
 .grid-default {
   background-color: #F6F5FF;
   height: 286px;
