--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,6 +13,7 @@
 @import 'blocks/unique-features'
 @import 'blocks/trending-products'
 @import 'blocks/discount-item'
+@import 'blocks/top'
 // Подключение секции grid-default
 @import 'blocks/gird-default'
 // Подключение секции main-items
