--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,6 +14,7 @@
 @import 'blocks/trending-products'
 @import 'blocks/discount-item'
 @import 'blocks/top'
+@import 'blocks/subscribe'
 // Подключение секции grid-default
 @import 'blocks/gird-default'
 // Подключение секции main-items
