create: brends block

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,6 +15,7 @@
 @import 'blocks/discount-item'
 @import 'blocks/top'
 @import 'blocks/subscribe'
+@import 'blocks/brends'
 // Подключение секции grid-default
 @import 'blocks/gird-default'
 // Подключение секции main-items
