--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,6 +16,7 @@
 @import 'blocks/top'
 @import 'blocks/subscribe'
 @import 'blocks/brends'
+@import 'blocks/leatest-blog'
 // Подключение секции grid-default
 @import 'blocks/gird-default'
 // Подключение секции main-items
