update: heatmap.js
heatmap v1.0

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -34,3 +34,10 @@ input::placeholder,textarea::placeholder
   color: #1A0B5B
   margin: auto
   font-weight: bold
+#heatmapContainerWrapper
+  width: 100%
+  height: 100%
+  position: absolute
+#heatmapContainer
+  width: 100%
+  height: 100%
