Done page with graphics

--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -1917,3 +1917,13 @@ template {
   margin: auto;
   margin-bottom: 79px;
 }/*# sourceMappingURL=style.css.map */
+
+.victorypie {
+  height: 600px;
+  display: flex;
+}
+.graphs-container {
+  max-width: 1177px;
+  margin: auto;
+
+}
