--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -2156,7 +2156,9 @@ template {
 
 .graphs-container {
   max-width: 1177px;
-  margin: auto;
+  flex-direction: column;
+  display: flex;
+  margin: 20px auto auto;
 
 }
 
@@ -2245,4 +2247,29 @@ template {
   font-size: 20px;
   font-weight: bold;
   color: darkred;
+}
+.button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.data-button {
+  font-family: Helvetica;
+  font-weight: 600;
+  font-size: 20px;
+  text-align: center;
+  color: #202125;
+  cursor: pointer;
+  max-width: 100px;
+  width: 100%;
+  outline: 3px solid;
+  outline-color: rgba(71, 126, 232,0.5);
+  transition: all 600ms cubic-bezier(0.2, 0, 0, 0.8);
+}
+
+.data-button:hover {
+  color: rgba(71, 126, 232, 0.7);
+  outline-color: rgba(71, 126, 232, 0);
+  outline-offset: 300px;
 }
