--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -2149,17 +2149,19 @@ template {
 
 /*# sourceMappingURL=style.css.map */
 
-.victorypie {
-  height: 600px;
-  display: flex;
-
-}
-
 .graphs-container {
   max-width: 1177px;
   flex-direction: column;
   display: flex;
   margin: 20px auto auto;
+  align-items: center;
+}
+
+.graph-description {
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+  color: #007aff;
 }
 
 .graphs {
