--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -2162,8 +2162,26 @@ template {
 
 }
 
+.graphs-buttons {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: #3b3b9d53;
+}
+
+.graphs-button {
+  margin-top: 50px;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-bottom: 20px;
+  padding: 7px;
+  font-size: 30px;
+  color: #3b3b9d53;
+}
+
 .footer-heatmapButton {
   margin-top: 20px;
+  /* visibility: hidden; */
 }
 
 .admin-header {
@@ -2248,6 +2266,7 @@ template {
   font-weight: bold;
   color: darkred;
 }
+
 .button-container {
   display: flex;
   align-items: center;
@@ -2264,7 +2283,7 @@ template {
   max-width: 100px;
   width: 100%;
   outline: 3px solid;
-  outline-color: rgba(71, 126, 232,0.5);
+  outline-color: rgba(71, 126, 232, 0.5);
   transition: all 600ms cubic-bezier(0.2, 0, 0, 0.8);
 }
 
@@ -2276,4 +2295,16 @@ template {
 
 .HomaPage {
   padding: 1px;
+}
+
+.heatmap-display {
+  border-top: 1px solid grey;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 100px;
+}
+
+.heatmap-home {
+  width: 100vw;
 }
