--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -2164,7 +2164,6 @@ template {
   color: #007aff;
 }
 
-
 .graphs-buttons {
   display: flex;
   justify-content: center;
@@ -2306,8 +2305,17 @@ template {
   flex-direction: column;
   align-items: center;
   margin-bottom: 100px;
+  width: 100vw;
 }
 
 .heatmap-home {
   width: 100vw;
+  height: 125vh;
+  transform: scale(0.75, 0.75)
+}
+
+.heatmap-pic {
+  margin-top: -80px;
+  margin-bottom: -150px;
+  z-index: -1;
 }
