--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -2166,7 +2166,8 @@ template {
 
 .graphs-buttons {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
   background-color: #3b3b9d53;
   z-index: 99;
